# terminal_clock

./: .dockerignore  Cargo.toml  Dockerfile  prek.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml  tag-and-release.yml  tests.yml
cli/: Cargo.toml
cli/src/: main.rs
default_themes/ascii_art/: mod.rs
default_themes/ascii_art/temple/: temple.rs
default_themes/colorschemes/: mod.rs  neo_tokyo.rs  neo_tokyo.toml
font_faces/: Cargo.toml
font_faces/src/: analog_clock.rs  color_clock.rs  helpers.rs
pomodoro/: Cargo.toml
src/: main.rs  renderer.rs
src/ascii_art/: temple.rs
src/font_face_types/: analog_clock.rs  binary_clock_color.rs  color_clock.rs  digital_clock.rs
tc-cli/: Cargo.toml
tc-cli/src/: main.rs
tc-default_themes/: Cargo.toml
tc-default_themes/src/: default_quotes.rs  lib.rs
tc-default_themes/src/ascii_art/: mod.rs  temple.toml
tc-default_themes/src/ascii_art/temple/: H_temple.ascii  MS_temple.ascii  mod.rs
tc-default_themes/src/colorschemes/: mod.rs  neo_tokyo.rs
tc-models/: Cargo.toml
tc-models/src/: analog_clock.rs  clock.rs  color_clock.rs  color_theme.rs  colorscheme.rs  digital_clock.rs  display_mode.rs  helper.rs  lib.rs  quote.rs  render_mode.rs  selectable_item.rs  tui_action.rs
tc-tui/: Cargo.toml
tc-tui/src/: event_handler.rs  helpers.rs  lib.rs  renderer.rs  tui_assets.rs  tui_models.rs  tui_state.rs
tc-tui/src/components/: carousel_selector.rs  color_input_field.rs  fallback_terminal_too_small.rs  global_dropdown.rs  help_box.rs  hero.rs  logo.rs  mod.rs  number_input.rs  pomodoro.rs  quote.rs  settings_menu.rs
tc-tui/src/tui_models/: application.rs  clock.rs  mod.rs  selectable_item.rs  selector.rs  settings.rs  styled_widget.rs  tui.rs  tui_action.rs  tui_error.rs
tc-tui/src/views/: clock.rs  help.rs  hero.rs  mod.rs  settings.rs
tc-user_config_loader/: Cargo.toml
tc-user_config_loader/src/: clock.rs  clock_face_loader.rs  color_theme_loader.rs  colorscheme.rs  colorscheme_loader.rs  error.rs  lib.rs  quote.rs  quote_loader.rs
tc-user_config_loader/src/clock_types/: analog_clock.rs  color_clock.rs  digital_clock.rs  mod.rs
tc-user_config_loader/src/configs/: analog_clock_config.rs  color_clock_config.rs  digital_clock_config.rs  helper.rs  misc.rs  mod.rs
tc-user_config_loader/src/default_themes/: default_quotes.rs  mod.rs
tc-user_config_loader/src/default_themes/clock_faces/: italic_seven_segment.toml  seven_segment_led.toml  temple.toml  thermometer.toml
tc-user_config_loader/src/default_themes/color_themes/: catppuccin_mocha.toml  terminal_clock.toml  tokyo_night.toml
tc-user_config_loader/src/default_themes/colorschemes/: tokyo_night.toml
tc-user_config_loader/src/loader/: clock_face_loader.rs  colorscheme_loader.rs  mod.rs
tc-user_config_loader/src/models/: clock.rs  colorscheme.rs  mod.rs
tui/: Cargo.toml
tui/src/: helpers.rs  lib.rs  renderer.rs  tui_assets.rs  tui_state.rs
user_config_loader/: Cargo.toml
user_config_loader/src/: clock_face_loader.rs  colorschema.rs  colorscheme_loader.rs  lib.rs
user_config_loader/src/clock_types/: analog_clock.rs  color_clock.rs  digital_clock.rs  mod.rs
