[workspace]
resolver = "2"
members = [
  "cli",
  "tui",
  "user_config_loader",
]

[workspace.dependencies]

# External dependiencies
clap                 = { version = "4.5.37", features = ["derive"] }
ratatui              = "0.29.0"
color-eyre           = "0.6"
unicode-segmentation = "1.8.0"
chrono               = "0.4.40"
