[workspace]
resolver = "2"
members = ["tc-*"]

[workspace.dependencies]

# External dependiencies
clap                 = { version = "4.5.37", features = ["derive"] }
ratatui              = "0.29.0"
color-eyre           = "0.6"
unicode-segmentation = "1.8.0"
chrono               = "0.4.40"
serde                = { version = "1.0", features = ["derive"] }
toml                 = "0.8"
tokio                = { version = "1", features = ["full"] }
