[workspace]
resolver = "2"
members = ["tc-*"]

[workspace.dependencies]

# External dependiencies
clap                 = { version = "4.5.37", features = ["derive"] }
ratatui              = { version = "0.29.0", features = ["unstable-widget-ref"] }
color-eyre           = "0.6"
unicode-segmentation = "1.8.0"
chrono               = "0.4.40"
serde                = { version = "1.0", features = ["derive"] }
toml                 = "0.8"
tokio                = { version = "1", features = ["full"] }
strum                = { version = "0.27", features = ["derive"] }

# Performance optimized release build
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Fast development build
[profile.dev]
opt-level = 0
debug = 1
incremental = true

# Increase dependency speed
[profile.dev.package."*"]
opt-level = 2
