[package]
name = "tc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tc-tui     = { path = "../tc-tui/" }

# External dependencies
clap       = { workspace = true }
color-eyre = { workspace = true }
tokio      = { workspace = true }
