[package]
name = "tc-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }

# External dependencies
unicode-segmentation = { workspace = true }
chrono               = { workspace = true }
serde                = { workspace = true }
strum                = { workspace = true }
