[package]
name = "tc-tui"
edition = "2024"

[dependencies]
tc-user_config_loader = { path = "../tc-user_config_loader/" }
tc-default_themes     = { path = "../tc-default_themes/" }

# External dependencies
ratatui               = { workspace = true }
color-eyre            = { workspace = true }
unicode-segmentation  = { workspace = true }
chrono                = { workspace = true }
tokio                 = { workspace = true }
