[package]
name    = "tc-tui"
version = "0.0.0"
edition = "2024"

[dependencies]
tc-user_config_loader = { path = "../tc-user_config_loader/" }
tc-models             = { path = "../tc-models/" }

# External dependencies
ratatui               = { workspace = true }
color-eyre            = { workspace = true }
unicode-segmentation  = { workspace = true }
chrono                = { workspace = true }
tokio                 = { workspace = true }
strum                 = { workspace = true }
