[package]
name = "tc-user_config_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tc-models            = { path = "../tc-models/" }

# External dependencies
ratatui              = { workspace = true }
chrono               = { workspace = true }
toml                 = { workspace = true }
serde                = { workspace = true }
