[package]
name = "tui"
edition = "2024"

[dependencies]
user_config_loader   = { path = "../user_config_loader/" }

# External dependencies
ratatui              = { workspace = true }
color-eyre           = { workspace = true }
unicode-segmentation = { workspace = true }
chrono               = { workspace = true }
